terraform/modules/ansible-master/security_groups.tf
resource "aws_security_group" "s5wesley_sg" {
  name_prefix = "s5wesley-sg"
  vpc_id      = aws_vpc.s5wesley_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    var.common_tags,
    { Name = format("%s-%s-%s-sg", var.common_tags["id"], var.common_tags["environment"], var.common_tags["project"]) }
  )
}
